--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="./../images/logo.png" class="logo">
+                    <img src="./../images/LOGO.png" class="logo">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!-- -----------Portfolio---------- -->
-        <div id="portfolio">
+        <div id="Portfolio">
             <div class="container">
                 <h1 class="sub-title">My Work:</h1>
                 <div class="work-list">
