--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="./../LOGO.png" class="logo">
+                    <img src="./LOGO.png" class="logo">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="./../myimage1.png" height="500px">
+                        <img src="./myimage1.png" height="500px">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me :-</h1>
@@ -100,7 +100,7 @@
                 <h1 class="sub-title">My Work:</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="./../OIP.jpg" height="250px" >
+                        <img src="./OIP.jpg" height="250px" >
                         <div class="layer">
                             <h3>Web-Design</h3>
                             <p>The Web-Design helps you to find <br>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./../ui_image.png" height="250px" width="100px">
+                        <img src="./ui_image.png" height="250px" width="100px">
                         <div class="layer">
                             <h3>Web-Design</h3>
                             <p>The Web-Design helps you to find <br>
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="./../landing-page.png" height="250px" width="100px">
+                        <img src="./landing-page.png" height="250px" width="100px">
                         <div class="layer">
                             <h3>Landingpage-Design</h3>
                             <p>The Web-Design helps you to find <br>
@@ -144,7 +144,7 @@
                             <a href=""><i class="fa-brands fa-twitter-square"></i></a>
                             <a href=""><i class="fa-brands fa-Linkedin"></i></a>
                         </div>
-                        <a href="./../My CV.pdf" download  class="btn btn2">Download CV</a>
+                        <a href="./My CV.pdf" download  class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form>
