--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="Width=device-width,initial-scale=1.0">
         <title>Personal Portfolio</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./style.css ">
         <script src="https://kit.fontawesome.com/2b31f63892.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -23,7 +23,7 @@
                 </nav>
                 <div class="header-text">
                     <p>Web Designer</p>
-                    <h1>Hi, I'm <span><i>Vaishnavi Dhumal</i></span><br> From Maharashatra</h1>
+                    <h1>Hi, I am <span><i>Vaishnavi Dhumal</i></span><br> From Maharashatra</h1>
                 </div>
             </div>
         </div>
